# timg

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: arm.yml  macos-brew.yml  macos.yml  release-musl-static.yml  ubuntu.yml
cmake/toolchains/: musl-static-minimal.cmake
scripts/: build-musl-static.sh
src/: CMakeLists.txt  image-display.cc
